# VinaSmol

./: .env.example  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ccvj/src/ccvj/: convert.py  download.py
docs/: future_enhancements.md
tests/: conftest.py  test_ccvj_convert.py  test_dedup.py  test_eeve.py  test_preprocessing.py  test_tokenizer.py
vinasmol/evaluation/: README.md  run_benchmarks.py  run_english_benchmarks.py
vinasmol/finetuning/: README.md
vinasmol/tokenization/: training.py
vinasmol/training/: README.md  cpt_eeve_stage_3.yml  cpt_eeve_stage_4.yml  cpt_eeve_stage_6.yml  cpt_eeve_stage_7.yml  cpt_eeve_stages.sh  cpt_stage_1_main.sh  cpt_stage_2_vocab_extension.sh  cpt_stage_3_annealing.sh  cpt_stage_3_annealing.yml  eeve.py  run_eeve.py
vinasmol/training/dataset/: README.md  annealing_data.py  datasets.py  deduplication.py  preprocessing.py
vinasmol/training/dataset/filtering/: analyze_ppl_filtering.ipynb  common.py  english.py  vietnamese.py
vinasmol_datamodule/src/vinasmol_datamodule/: __init__.py
